Remove conflict copy and fix moc spacing for light theme

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -4,25 +4,28 @@
 
 // These are my MOC images
 [saved-theme="dark"] div.moc img {
-    filter: invert(70%);
-    margin: 1rem;
+  filter: invert(70%);
 }
 
 div.moc {
-    display: flex;
-    width: auto;
-    flex-wrap: wrap;
-    place-content: center space-between;
-    justify-content: center;
-}
+  display: flex;
+  width: auto;
+  flex-wrap: wrap;
+  place-content: center space-between;
+  justify-content: center;
 
-div.mocitem {
-    float: left;
-    text-align: center;
-}
+  img {
+    margin: 1rem;
+  }
 
-div.moc a {
+  a {
     background-color: unset;
     display: flex;
     flex-direction: column;
+  }
+}
+
+div.mocitem {
+  float: left;
+  text-align: center;
 }
